test/org/midica/testfiles/failing/eff-flow-double-for-coarse-tune.midica
INCLUDE inc/instruments.midica


0: coarse_tune.double.set(50)
